want do to but do not know what